# love-god-love-people

./: .env.example  .gitignore  AGENTS.md  BRIEF.md  CLAUDE.md  NEXT-STEPS.md  README.md  docker-compose.yml  nixpacks.toml  railway.toml
backend/: pyproject.toml
backend/apps/accounts/: adapters.py  apps.py  middleware.py  tests.py  urls.py  views.py
backend/apps/associations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  urls_types.py  views.py
backend/apps/associations/migrations/: 0001_initial.py  0002_seed_types.py  0003_historicalpersonassociation.py
backend/apps/entries/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/entries/migrations/: 0001_initial.py  (+1 more)
backend/apps/example/: apps.py  models.py  tests.py  urls.py  views.py
backend/apps/extraction/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/future/: admin.py  apps.py  models.py  prayer_content.py  services.py  tests.py  urls.py  views.py
backend/apps/orgs/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  urls_memberships.py  views.py
backend/apps/people/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/photos/: tests.py  urls.py  views.py
backend/apps/properties/: admin.py  models.py  serializers.py  tests.py  urls_defs.py  urls_values.py  views.py
backend/apps/review/: tests.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/services/: ai.py
(+94 files in other folders)
