[project]
name = "s3-prototype-template-backend"
version = "0.1.0"
description = "S3 prototype template — Django backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "django-q2>=1.7",
    "requests>=2.32",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "mozilla-django-oidc>=4.0",
]

[tool.uv]
package = false
