[project]
name = "love-god-love-people-backend"
version = "0.1.0"
description = "Personal CRM — Django backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "django-q2>=1.7",
    "django-allauth[socialaccount]>=65.0",
    "django-simple-history>=3.5",
    "requests>=2.32",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "pillow>=10.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "piexif>=1.1.3",
]
